# detouring

./: CMakeLists.txt
include/detouring/: helpers.hpp
source/: hook.cpp
